--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ preload="auto"
 width="800"
 height="450"
 data-setup='{"playbackRates":[0.5,1,1.5,2]}'
-> 
-<sourceid="video-source" src="" type="video/mp4">
+>
+<source id="video-source" src="" type="video/mp4">
 </video>
 
 <h3>Playlist</h3>
@@ -52,25 +52,25 @@ var videos = [
 
 {
 name:"Video 1",
-url:"https://drive.google.com/file/d/1TY_mVX8jIhTewkHJNVxbGOOQou5lr1Lk/view?usp=drivesdk"
+url:"https://drive.google.com/uc?export=download&id=1TY_mVX8jIhTewkHJNVxbGOOQou5lr1Lk"
 },
 
 {
 name:"Video 2",
-url:"https://drive.google.com/file/d/1wWxqDu-i7MGaPcmcSTTfdfXCYOfiSQqW/view?usp=drivesdk"
+url:"https://drive.google.com/uc?export=download&id=1wWxqDu-i7MGaPcmcSTTfdfXCYOfiSQqW"
 }
 
 ];
 
 var playlist = document.getElementById("playlist");
 
-videos.forEach((v,i)=>{
+videos.forEach((v)=>{
 
 var div=document.createElement("div");
 div.innerText=v.name;
 
 div.onclick=function(){
-player.src({type:"video/mp4",src:v.url});
+player.src({ type:"video/mp4", src:v.url });
 player.play();
 };
 
