--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ var videos = [
 
 {
 name:"Video 1",
-url:"https://drive.google.com/uc?export=download&id=1TY_mVX8jIhTewkHJNVxbGOOQou5lr1Lk"
+url:"https://drive.google.com/file/d/1nFZQGk00zsXHNY70IfkDyTIazJtSZlCr/view?usp=sharing"
 },
 
 {
