--- a/index.html
+++ b/index.html
@@ -1,4 +1,91 @@
-<iframe width="800" height="450"
-src="https://drive.google.com/file/d/1nFZQGk00zsXHNY70IfkDyTIazJtSZlCr/preview"
-allow="autoplay">
-</iframe>
+<!DOCTYPE html>
+<html>
+<head>
+
+<link href="https://vjs.zencdn.net/8.5.2/video-js.css" rel="stylesheet" />
+
+<style>
+body{
+background:#111;
+color:white;
+font-family:Arial;
+display:flex;
+justify-content:center;
+align-items:center;
+height:100vh;
+margin:0;
+}
+
+#loginBox, #videoBox{
+display:none;
+}
+
+input{
+padding:10px;
+font-size:16px;
+width:250px;
+}
+button{
+padding:10px 20px;
+font-size:16px;
+cursor:pointer;
+margin-top:10px;
+}
+#error{
+color:red;
+margin-top:10px;
+}
+</style>
+
+</head>
+
+<body>
+
+<!-- PASSWORD PAGE -->
+<div id="loginBox">
+<h2>Enter Password</h2>
+<input type="password" id="password" placeholder="Password"><br>
+<button onclick="checkPassword()">Unlock</button>
+<div id="error"></div>
+</div>
+
+<!-- VIDEO PAGE -->
+<div id="videoBox">
+
+<video
+id="my-video"
+class="video-js vjs-default-skin"
+controls
+preload="auto"
+width="800"
+height="450"
+data-setup='{"playbackRates":[0.5,1,1.5,2]}'
+>
+<source src="https://drive.google.com/uc?export=download&id=1nFZQGk00zsXHNY70IfkDyTIazJtSZlCr" type="video/mp4">
+</video>
+
+</div>
+
+<script src="https://vjs.zencdn.net/8.5.2/video.min.js"></script>
+
+<script>
+const correctPassword = "1234";   // 🔐 CHANGE PASSWORD HERE
+
+document.getElementById("loginBox").style.display="block";
+
+function checkPassword(){
+
+const userPass = document.getElementById("password").value;
+
+if(userPass === correctPassword){
+document.getElementById("loginBox").style.display="none";
+document.getElementById("videoBox").style.display="block";
+videojs('my-video');
+}else{
+document.getElementById("error").innerText="Wrong password!";
+}
+}
+</script>
+
+</body>
+</html>
