--- a/index.html
+++ b/index.html
@@ -1,56 +1,76 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Video.js Local Upload Player</title>
+<meta charset="UTF-8">
+<title>Video.js VR Player</title>
 
-  <!-- Video.js CSS -->
-  <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
+<!-- Video.js -->
+<link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
 
+<!-- videojs-vr plugin CSS -->
+<link href="https://unpkg.com/videojs-vr/dist/videojs-vr.css" rel="stylesheet">
+
+<style>
+body {
+  background:#111;
+  color:white;
+  text-align:center;
+}
+</style>
 </head>
 
 <body>
 
-<h2>Upload Video and Play</h2>
+<h2>VR 360 / 180 Video Player</h2>
 
-<!-- Upload button -->
 <input type="file" id="videoUpload" accept="video/*">
 
 <br><br>
 
-<!-- Video Player -->
-<video
-  id="my-video"
+<video id="my-video"
   class="video-js vjs-default-skin"
   controls
-  preload="auto"
-  width="640"
-  height="360">
+  width="800"
+  height="450">
 </video>
 
-<!-- Video.js Script -->
+<!-- Video.js -->
 <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
 
+<!-- A-Frame (required for VR) -->
+<script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+
+<!-- videojs-vr plugin -->
+<script src="https://unpkg.com/videojs-vr/dist/videojs-vr.min.js"></script>
+
 <script>
-  // Initialize player
-  var player = videojs('my-video');
 
-  // Upload event
-  document.getElementById('videoUpload').addEventListener('change', function(event) {
+const player = videojs('my-video');
 
-    var file = event.target.files[0];
+// Enable VR mode
+player.vr({
+  projection: 'AUTO',   // AUTO detect (360 / 180)
+  debug: true,
+  forceCardboard: false
+});
 
-    if(file) {
-      var videoURL = URL.createObjectURL(file);
+document.getElementById('videoUpload')
+.addEventListener('change', function(e){
 
-      player.src({
-        src: videoURL,
-        type: file.type
-      });
+  const file = e.target.files[0];
+  if(!file) return;
 
-      player.play();
-    }
+  const url = URL.createObjectURL(file);
+
+  player.src({
+    src: url,
+    type: file.type
   });
+
+  player.play();
+
+});
+
 </script>
 
 </body>
