--- a/index.html
+++ b/index.html
@@ -1,73 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Video.js VR Player</title>
 
-<!-- Video.js -->
 <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
-
-<!-- videojs-vr plugin CSS -->
 <link href="https://unpkg.com/videojs-vr/dist/videojs-vr.css" rel="stylesheet">
 
-<style>
-body {
-  background:#111;
-  color:white;
-  text-align:center;
-}
-</style>
 </head>
 
 <body>
 
-<h2>VR 360 / 180 Video Player</h2>
+<input type="file" id="videoUpload">
 
-<input type="file" id="videoUpload" accept="video/*">
+<video id="player" class="video-js" controls width="800"></video>
 
-<br><br>
-
-<video id="my-video"
-  class="video-js vjs-default-skin"
-  controls
-  width="800"
-  height="450">
-</video>
-
-<!-- Video.js -->
 <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
-
-<!-- A-Frame (required for VR) -->
 <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-
-<!-- videojs-vr plugin -->
 <script src="https://unpkg.com/videojs-vr/dist/videojs-vr.min.js"></script>
 
 <script>
 
-const player = videojs('my-video');
+var player = videojs('player');
 
-// Enable VR mode
-player.vr({
-  projection: 'AUTO',   // AUTO detect (360 / 180)
-  debug: true,
-  forceCardboard: false
-});
+player.ready(function(){
 
-document.getElementById('videoUpload')
-.addEventListener('change', function(e){
-
-  const file = e.target.files[0];
-  if(!file) return;
-
-  const url = URL.createObjectURL(file);
-
-  player.src({
-    src: url,
-    type: file.type
+  player.vr({
+    projection:'360'
   });
 
-  player.play();
+});
+
+document.getElementById('videoUpload').addEventListener('change', function(e){
+
+  const file = e.target.files[0];
+
+  player.src({
+    src: URL.createObjectURL(file),
+    type: file.type
+  });
 
 });
 
