--- a/index.html
+++ b/index.html
@@ -1,17 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
+<title>Local VR Player</title>
 
 <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
 <link href="https://unpkg.com/videojs-vr/dist/videojs-vr.css" rel="stylesheet">
 
+<style>
+body { font-family: Arial; margin: 0; background: #111; color: #fff; }
+.container { display: flex; height: 100vh; }
+.player { flex: 3; padding: 20px; display: flex; flex-direction: column; }
+.sidebar { flex: 1; background: #222; overflow-y: auto; padding: 10px; }
+button { padding:8px 16px; background:red; color:white; border:none; border-radius:6px; cursor:pointer; margin-right:10px; }
+.video-item { margin-bottom:10px; cursor:pointer; }
+.video-item.active { border:2px solid red; }
+</style>
 </head>
 
 <body>
 
-<input type="file" id="videoUpload">
+<div class="container">
 
-<video id="player" class="video-js" controls width="800"></video>
+<div class="player">
+
+<video id="mainPlayer"
+ class="video-js vjs-default-skin"
+ controls
+ playsinline
+ width="100%">
+</video>
+
+<br>
+
+<button id="vrToggle">🥽 VR OFF</button>
+<button id="nextBtn">Next ▶</button>
+<input type="file" id="folderPicker" webkitdirectory multiple style="display:none;">
+<button id="loadBtn">📁 Load Folder</button>
+
+</div>
+
+<div class="sidebar" id="sidebar"></div>
+
+</div>
 
 <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
 <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
@@ -19,26 +50,102 @@
 
 <script>
 
-var player = videojs('player');
+const player = videojs('mainPlayer');
 
-player.ready(function(){
+let vrEnabled=false;
+let vrInstance=null;
 
-  player.vr({
-    projection:'360'
-  });
+function enableVR(){
+
+  if(!vrInstance){
+
+    vrInstance = player.vr({
+      projection:'360',
+      motionControls:true
+    });
+
+  }
+
+}
+
+function disableVR(){
+
+  if(vrInstance){
+    vrInstance.reset();
+    vrInstance=null;
+  }
+
+}
+
+// VR toggle button
+document.getElementById("vrToggle").onclick=()=>{
+
+  vrEnabled=!vrEnabled;
+
+  if(vrEnabled){
+    enableVR();
+    vrToggle.textContent="🥽 VR ON";
+  }else{
+    disableVR();
+    vrToggle.textContent="🥽 VR OFF";
+  }
+
+};
+
+const sidebar=document.getElementById("sidebar");
+const folderPicker=document.getElementById("folderPicker");
+
+let files=[];
+let currentIndex=0;
+
+document.getElementById("loadBtn").onclick=()=>folderPicker.click();
+
+folderPicker.addEventListener("change",(e)=>{
+
+  files=Array.from(e.target.files).filter(f=>f.type.startsWith("video"));
+
+  loadSidebar();
+  playVideo(0);
 
 });
 
-document.getElementById('videoUpload').addEventListener('change', function(e){
+function loadSidebar(){
 
-  const file = e.target.files[0];
+  sidebar.innerHTML="";
+
+  files.forEach((file,i)=>{
+
+    const item=document.createElement("div");
+    item.className="video-item";
+    item.textContent=file.name;
+
+    item.onclick=()=>playVideo(i);
+
+    sidebar.appendChild(item);
+
+  });
+
+}
+
+function playVideo(i){
+
+  currentIndex=i;
 
   player.src({
-    src: URL.createObjectURL(file),
-    type: file.type
+    src:URL.createObjectURL(files[i]),
+    type:files[i].type
   });
 
-});
+  player.play();
+
+}
+
+document.getElementById("nextBtn").onclick=()=>{
+
+  currentIndex=(currentIndex+1)%files.length;
+  playVideo(currentIndex);
+
+};
 
 </script>
 
