--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Local VR Player</title>
 
-<link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
+<meta charset="UTF-8">
+
+<link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet">
 <link href="https://unpkg.com/videojs-vr/dist/videojs-vr.css" rel="stylesheet">
 
 <style>
-body { font-family: Arial; margin: 0; background: #111; color: #fff; }
-.container { display: flex; height: 100vh; }
-.player { flex: 3; padding: 20px; display: flex; flex-direction: column; }
-.sidebar { flex: 1; background: #222; overflow-y: auto; padding: 10px; }
-button { padding:8px 16px; background:red; color:white; border:none; border-radius:6px; cursor:pointer; margin-right:10px; }
-.video-item { margin-bottom:10px; cursor:pointer; }
-.video-item.active { border:2px solid red; }
+
+body { margin:0; background:#111; color:white; font-family:Arial;}
+
+.container { display:flex; height:100vh; }
+
+.player { flex:3; padding:20px; }
+
+.sidebar { flex:1; background:#222; overflow:auto; padding:10px; }
+
+.video-js { width:100% !important; height:80vh !important; }
+
+button { padding:8px 16px; margin-right:10px; background:red; color:white; border:none; }
+
+.video-item { cursor:pointer; padding:5px; }
+
 </style>
+
 </head>
 
 <body>
@@ -24,14 +33,9 @@ button { padding:8px 16px; background:red; color:white; border:none; border-radi
 
 <div class="player">
 
-<video id="mainPlayer"
- class="video-js vjs-default-skin"
- controls
- playsinline
- width="100%">
-</video>
+<video id="mainPlayer" class="video-js vjs-default-skin" controls playsinline></video>
 
-<br>
+<br><br>
 
 <button id="vrToggle">🥽 VR OFF</button>
 <button id="nextBtn">Next ▶</button>
@@ -40,7 +44,7 @@ button { padding:8px 16px; background:red; color:white; border:none; border-radi
 
 </div>
 
-<div class="sidebar" id="sidebar"></div>
+<div id="sidebar" class="sidebar"></div>
 
 </div>
 
@@ -53,13 +57,18 @@ button { padding:8px 16px; background:red; color:white; border:none; border-radi
 const player = videojs('mainPlayer');
 
 let vrEnabled=false;
-let vrInstance=null;
+let vrPlugin=null;
 
-function enableVR(){
+function applyVR(){
 
-  if(!vrInstance){
+  if(vrPlugin){
+    vrPlugin.reset();
+    vrPlugin=null;
+  }
 
-    vrInstance = player.vr({
+  if(vrEnabled){
+
+    vrPlugin = player.vr({
       projection:'360',
       motionControls:true
     });
@@ -68,27 +77,13 @@ function enableVR(){
 
 }
 
-function disableVR(){
-
-  if(vrInstance){
-    vrInstance.reset();
-    vrInstance=null;
-  }
-
-}
-
-// VR toggle button
-document.getElementById("vrToggle").onclick=()=>{
+document.getElementById("vrToggle").onclick=function(){
 
   vrEnabled=!vrEnabled;
 
-  if(vrEnabled){
-    enableVR();
-    vrToggle.textContent="🥽 VR ON";
-  }else{
-    disableVR();
-    vrToggle.textContent="🥽 VR OFF";
-  }
+  this.textContent = vrEnabled ? "🥽 VR ON" : "🥽 VR OFF";
+
+  applyVR();
 
 };
 
@@ -100,32 +95,26 @@ let currentIndex=0;
 
 document.getElementById("loadBtn").onclick=()=>folderPicker.click();
 
-folderPicker.addEventListener("change",(e)=>{
+folderPicker.addEventListener("change", e=>{
 
   files=Array.from(e.target.files).filter(f=>f.type.startsWith("video"));
-
-  loadSidebar();
-  playVideo(0);
-
-});
-
-function loadSidebar(){
 
   sidebar.innerHTML="";
 
   files.forEach((file,i)=>{
 
-    const item=document.createElement("div");
-    item.className="video-item";
-    item.textContent=file.name;
+    const div=document.createElement("div");
+    div.className="video-item";
+    div.textContent=file.name;
+    div.onclick=()=>playVideo(i);
 
-    item.onclick=()=>playVideo(i);
-
-    sidebar.appendChild(item);
+    sidebar.appendChild(div);
 
   });
 
-}
+  playVideo(0);
+
+});
 
 function playVideo(i){
 
@@ -136,7 +125,12 @@ function playVideo(i){
     type:files[i].type
   });
 
-  player.play();
+  player.ready(()=>{
+
+    applyVR();   // IMPORTANT: reapply VR after source load
+    player.play().catch(()=>{});
+
+  });
 
 }
 
