--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 
-<link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
+<!-- CHANGE version 8 → 7 -->
+<link href="https://vjs.zencdn.net/7.21.1/video-js.css" rel="stylesheet" />
 <link href="https://unpkg.com/videojs-vr/dist/videojs-vr.css" rel="stylesheet">
 
 </head>
@@ -22,7 +23,9 @@
        preload="auto">
 </video>
 
-<script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
+<!-- CHANGE version 8 → 7 -->
+<script src="https://vjs.zencdn.net/7.21.1/video.min.js"></script>
+
 <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
 <script src="https://unpkg.com/videojs-vr/dist/videojs-vr.min.js"></script>
 
@@ -30,7 +33,6 @@
 
 var player = videojs('player');
 
-// Upload video
 document.getElementById('videoUpload').addEventListener('change', function(e){
 
   const file = e.target.files[0];
@@ -43,7 +45,7 @@ document.getElementById('videoUpload').addEventListener('change', function(e){
     type:file.type
   });
 
-  // IMPORTANT: initialize VR AFTER metadata loaded
+  // Initialize VR AFTER video loads
   player.one('loadedmetadata', function(){
 
       player.vr({
