--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 
-<!-- CHANGE version 8 → 7 -->
 <link href="https://vjs.zencdn.net/7.21.1/video-js.css" rel="stylesheet" />
-<link href="https://unpkg.com/videojs-vr/dist/videojs-vr.css" rel="stylesheet">
+<link href="https://unpkg.com/videojs-vr@1.10.0/dist/videojs-vr.css" rel="stylesheet">
 
 </head>
 
@@ -19,15 +18,15 @@
        controls
        width="800"
        playsinline
-       webkit-playsinline
-       preload="auto">
+       webkit-playsinline>
 </video>
 
-<!-- CHANGE version 8 → 7 -->
 <script src="https://vjs.zencdn.net/7.21.1/video.min.js"></script>
 
-<script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-<script src="https://unpkg.com/videojs-vr/dist/videojs-vr.min.js"></script>
+<!-- IMPORTANT: AFRAME MUST LOAD BEFORE videojs-vr -->
+<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+
+<script src="https://unpkg.com/videojs-vr@1.10.0/dist/videojs-vr.min.js"></script>
 
 <script>
 
@@ -42,16 +41,17 @@ document.getElementById('videoUpload').addEventListener('change', function(e){
 
   player.src({
     src:url,
-    type:file.type
+    type:"video/mp4"   // force type (important)
   });
 
-  // Initialize VR AFTER video loads
-  player.one('loadedmetadata', function(){
+  player.ready(function(){
 
       player.vr({
-        projection:'360',
-        motionControls:true
+          projection:'360',
+          motionControls:true
       });
+
+      player.play();
 
   });
 
