--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 
+<!-- VideoJS CSS -->
 <link href="https://vjs.zencdn.net/7.21.1/video-js.css" rel="stylesheet" />
+
+<!-- VR plugin CSS -->
 <link href="https://unpkg.com/videojs-vr@1.10.0/dist/videojs-vr.css" rel="stylesheet">
 
 </head>
@@ -18,14 +21,17 @@
        controls
        width="800"
        playsinline
-       webkit-playsinline>
+       webkit-playsinline
+       preload="auto">
 </video>
 
+<!-- VideoJS (version 7 for VR compatibility) -->
 <script src="https://vjs.zencdn.net/7.21.1/video.min.js"></script>
 
-<!-- IMPORTANT: AFRAME MUST LOAD BEFORE videojs-vr -->
+<!-- AFRAME (required for VR) -->
 <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 
+<!-- videojs VR plugin -->
 <script src="https://unpkg.com/videojs-vr@1.10.0/dist/videojs-vr.min.js"></script>
 
 <script>
@@ -41,14 +47,16 @@ document.getElementById('videoUpload').addEventListener('change', function(e){
 
   player.src({
     src:url,
-    type:"video/mp4"   // force type (important)
+    type:"video/mp4"
   });
 
-  player.ready(function(){
+  // initialize VR after video loads
+  player.one('loadedmetadata', function(){
 
       player.vr({
           projection:'360',
-          motionControls:true
+          motionControls:true,
+          ui:true   // ⭐ shows VR icon button
       });
 
       player.play();
