--- a/index.html
+++ b/index.html
@@ -2,8 +2,21 @@
 <html>
 <head>
 
+<!-- VideoJS CSS -->
 <link href="https://vjs.zencdn.net/7.21.1/video-js.css" rel="stylesheet"/>
+
+<!-- VR plugin CSS -->
 <link href="https://unpkg.com/videojs-vr@1.10.0/dist/videojs-vr.css" rel="stylesheet"/>
+
+<style>
+
+/* ⭐ Custom VR goggles icon */
+.vjs-icon-vr:before {
+  content: "🥽";
+  font-size:16px;
+}
+
+</style>
 
 </head>
 
@@ -21,15 +34,20 @@
        webkit-playsinline>
 </video>
 
+<!-- VideoJS -->
 <script src="https://vjs.zencdn.net/7.21.1/video.min.js"></script>
+
+<!-- AFRAME (required for VR) -->
 <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+
+<!-- videojs VR plugin -->
 <script src="https://unpkg.com/videojs-vr@1.10.0/dist/videojs-vr.min.js"></script>
 
 <script>
 
 var player = videojs('player');
 
-// ⭐ CREATE CUSTOM VR BUTTON
+// ⭐ Create custom VR button
 var Button = videojs.getComponent('Button');
 
 var VRButton = videojs.extend(Button, {
@@ -37,7 +55,7 @@ var VRButton = videojs.extend(Button, {
   constructor: function(player, options) {
     Button.apply(this, arguments);
     this.controlText("VR Mode");
-    this.addClass('vjs-icon-cog'); // icon style
+    this.addClass('vjs-icon-vr'); // VR goggles icon
   },
 
   handleClick: function() {
