--- a/index.html
+++ b/index.html
@@ -1,105 +1,194 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
+<title>VR 360 Local Player (YouTube Style)</title>
 
-<!-- VideoJS CSS -->
-<link href="https://vjs.zencdn.net/7.21.1/video-js.css" rel="stylesheet"/>
-
-<!-- VR plugin CSS -->
-<link href="https://unpkg.com/videojs-vr@1.10.0/dist/videojs-vr.css" rel="stylesheet"/>
+<link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
+<link href="https://unpkg.com/videojs-vr/dist/videojs-vr.css" rel="stylesheet">
 
 <style>
-
-/* ⭐ Custom VR goggles icon */
-.vjs-icon-vr:before {
-  content: "🥽";
-  font-size:16px;
-}
-
-</style>
-
-</head>
-
-<body>
-
-<input type="file" id="videoUpload">
-
-<br><br>
-
-<video id="player"
-       class="video-js vjs-default-skin"
-       controls
-       width="800"
-       playsinline
-       webkit-playsinline>
-</video>
-
-<!-- VideoJS -->
-<script src="https://vjs.zencdn.net/7.21.1/video.min.js"></script>
-
-<!-- AFRAME (required for VR) -->
-<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-
-<!-- videojs VR plugin -->
-<script src="https://unpkg.com/videojs-vr@1.10.0/dist/videojs-vr.min.js"></script>
-
-<script>
-
-var player = videojs('player');
-
-// ⭐ Create custom VR button
-var Button = videojs.getComponent('Button');
-
-var VRButton = videojs.extend(Button, {
-
-  constructor: function(player, options) {
-    Button.apply(this, arguments);
-    this.controlText("VR Mode");
-    this.addClass('vjs-icon-vr'); // VR goggles icon
-  },
-
-  handleClick: function() {
-
-    if(player.vr()) {
-        player.vr().togglePlay(); // toggle VR view
-    }
-
+  /* 2. Your Interface CSS */
+  body { font-family: Arial; margin: 0; background: #111; color: #fff; height: 100vh; overflow: hidden; }
+  
+  .container { display: flex; height: 100%; width: 100%; }
+  
+  /* Main Player Area */
+  .player-section { 
+    flex: 3; 
+    padding: 20px; 
+    display: flex; 
+    flex-direction: column; 
+    background: #000;
+    position: relative;
   }
 
-});
+  /* Force Video.js to fill the flex container */
+  .video-js {
+    width: 100% !important;
+    height: 100% !important; 
+    border-radius: 8px;
+    overflow: hidden;
+  }
 
-videojs.registerComponent('VRButton', VRButton);
+  /* Controls Bar under video */
+  .controls-bar {
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+  }
 
-// Add button to control bar
+  button { padding: 10px 20px; border: none; border-radius: 6px; background: #cc0000; color: #fff; cursor: pointer; margin-right: 10px; font-weight: bold; }
+  button:hover { background: #ff0000; }
+  
+  /* Sidebar */
+  .sidebar { flex: 1; background: #1f1f1f; overflow-y: auto; padding: 10px; border-left: 1px solid #333; }
+  
+  .search-bar { width: 95%; padding: 10px; border: none; border-radius: 4px; background: #121212; color: #fff; margin-bottom: 15px; border: 1px solid #333; }
+  
+  .video-item { display: flex; flex-direction: column; margin-bottom: 15px; cursor: pointer; padding: 8px; border-radius: 6px; transition: 0.2s; background: #121212; }
+  .video-item:hover { background: #2a2a2a; }
+  .video-item.active { border: 2px solid #cc0000; background: #222; }
+  
+  /* Sidebar Previews */
+  .video-item video { width: 100%; border-radius: 4px; pointer-events: none; background: #000; }
+  .video-item span { display: block; margin-top: 8px; font-size: 14px; line-height: 1.4; color: #ddd; }
+
+</style>
+</head>
+<body>
+
+<div class="container">
+  
+  <div class="player-section">
+    <video id="player" class="video-js vjs-default-skin vjs-big-play-centered" controls crossorigin="anonymous" playsinline></video>
+    
+    <div class="controls-bar">
+      <button id="nextBtn">Next ▶</button>
+      <input type="file" id="folderPicker" webkitdirectory directory multiple accept="video/mp4" style="display:none;">
+      <button id="loadBtn">📁 Load Folder</button>
+    </div>
+  </div>
+
+  <div class="sidebar">
+    <input type="text" id="search" class="search-bar" placeholder="Search videos...">
+    <div id="playlist"></div>
+  </div>
+
+</div>
+
+<script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
+<script src="https://unpkg.com/videojs-vr/dist/videojs-vr.min.js"></script>
+
+<script>
+// 1. Initialize Video.js Player with VR
+var player = videojs('player');
+
 player.ready(function(){
-   player.controlBar.addChild('VRButton', {});
+  player.vr({
+    projection: '360',
+    motionControls: true
+  });
 });
 
+// 2. Variables
+const playlistContainer = document.getElementById("playlist");
+const search = document.getElementById("search");
+const folderPicker = document.getElementById("folderPicker");
+let files = [];
+let currentIndex = 0;
 
-// Upload video
-document.getElementById('videoUpload').addEventListener('change', function(e){
+// 3. Load Folder Logic
+document.getElementById("loadBtn").addEventListener("click", () => folderPicker.click());
 
-  const file = e.target.files[0];
-  if(!file) return;
+folderPicker.addEventListener("change", (e) => {
+  // Filter for video files
+  files = Array.from(e.target.files).filter(f => f.type.startsWith('video/'));
+  
+  if (files.length === 0) return alert("No video files found in this folder!");
+  
+  loadSidebar();
+  playVideo(0);
+});
 
+// 4. Create Sidebar Dynamically
+function loadSidebar() {
+  playlistContainer.innerHTML = "";
+  
+  files.forEach((file, i) => {
+    const item = document.createElement("div");
+    item.className = "video-item";
+
+    // Sidebar Preview (Standard video tag, not VR)
+    const vid = document.createElement("video");
+    vid.src = URL.createObjectURL(file);
+    vid.muted = true;
+    
+    // Hover effects for preview
+    item.addEventListener("mouseenter", () => vid.play().catch(()=>{})); // Catch error if user hasn't interacted yet
+    item.addEventListener("mouseleave", () => { vid.pause(); vid.currentTime = 0; });
+    item.addEventListener("click", () => playVideo(i));
+
+    const label = document.createElement("span");
+    label.textContent = file.name;
+
+    item.appendChild(vid);
+    item.appendChild(label);
+    playlistContainer.appendChild(item);
+  });
+  
+  highlightActive(0);
+}
+
+// 5. Play Video Function (Connected to VR Player)
+function playVideo(i) {
+  if (!files[i]) return;
+  currentIndex = i;
+  
+  const file = files[i];
   const url = URL.createObjectURL(file);
 
+  // Video.js specific source loading
   player.src({
-    src:url,
-    type:"video/mp4"
+    src: url,
+    type: file.type
   });
 
-  player.one('loadedmetadata', function(){
+  player.play().catch(()=>{}); // Auto-play
+  highlightActive(i);
+}
 
-      player.vr({
-          projection:'360',
-          motionControls:true
-      });
-
+// 6. Highlight Active Item
+function highlightActive(i) {
+  document.querySelectorAll(".video-item").forEach((el, idx) => {
+    el.classList.toggle("active", idx === i);
   });
+}
 
+// 7. Next Button Logic
+document.getElementById("nextBtn").addEventListener("click", () => {
+  currentIndex = (currentIndex + 1) % files.length;
+  playVideo(currentIndex);
 });
 
+// 8. Auto-play next when video ends (Video.js Event)
+player.on('ended', () => {
+  currentIndex = (currentIndex + 1) % files.length;
+  playVideo(currentIndex);
+});
+
+// 9. Search Filter
+search.addEventListener("input", () => {
+  const term = search.value.toLowerCase();
+  document.querySelectorAll(".video-item").forEach(item => {
+    item.style.display = item.innerText.toLowerCase().includes(term) ? "flex" : "none";
+  });
+});
+
+// Resize fix for VR
+window.addEventListener('resize', () => {
+  if(player) player.fluid(true);
+});
 </script>
 
 </body>
